Memory tuning of tomcat and elasticsearch #25